editted some budget and project functionalities